--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ font-weight: bold;
   left:10px;
 }
 .register-img{
-    background-image: linear-gradient(rgba(10, 202, 236, 0.5),rgba(10, 202, 236, 0.5)),
+    background-image: linear-gradient(rgba(9, 206, 241, 0.5),rgba(10, 202, 236, 0.5)),
     url("./images/signup_bg.jpeg");
     background-size: cover;
     background-position: center center;
@@ -69,9 +69,42 @@ font-weight: bold;
     width: 45%;
 
 }
+.search-form .form-control{
+    width:100% !important;
+}
+.search-form .btn{
+    height:40px;
+    margin-top: 20px;
+    margin-left:10px;
+}
 
-
-
-
-
-
+/* styling for feedback page */
+.feedback{
+    padding-top:90px;
+    background-image: url("./images/feedback.jpg");
+     height : 100vh;
+     width:100%;
+    background-repeat: no-repeat;
+}
+.feedback_content{
+height:80vh;
+width:70%;
+margin:auto;
+background-color: black;
+opacity:0.5;
+color:rgb(106, 175, 221);
+}
+.feedback .form-control{
+    width:75%;
+}
+.table{
+    background-color:white;
+    /* border:2px blue solid; */
+    color:black !important;
+}
+.scroll{
+    height: 300px;
+    width:70%;
+    margin: auto;
+    overflow: auto;
+}
